# airport-investment-agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN_JOURNAL.md  README.md  package.json
.claude/commands/: add-eval.md  eval.md  ship.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: orchestrator.py  system_prompt.py  tools.py
backend/app/data/: airports.py  regions.py
backend/app/data/static/: airport_stats.json  airports.json
backend/app/routers/: chat.py
backend/app/scoring/: engine.py  formulas.py  models.py
evals/: questions.json
frontend/: .gitignore  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  globals.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useVoiceInput.ts  useVoiceOutput.ts
frontend/src/types/: speech-recognition.d.ts
